@@ -1,5 +1,6 @@
 0.8.10
 - Fix segfault for rules whose subject is number oriented
+- When database problem is found on startup, rebuild database
 
 0.8.9
 - Systemd usage updates
